# AItana

./: .env  .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
data/: aitana.db  gastos_alberto.csv  gastos_pepe.csv
src/aitana/: __init__.py  __main__.py  bot.py  llm_client.py  memory.py
src/aitana/handlers/: __init__.py  ask.py  chat.py  clear.py  debug.py  echo.py  help.py  start.py  stats.py
src/aitana/utils/: _ruff_fix.py  expenses.py  logging.py
tests/: test_ask.py  test_chat.py  test_echo.py  test_expense.py  test_help_stats.py
